--- a/asd/index.html
+++ b/asd/index.html
@@ -24,6 +24,7 @@
 					Um pequeno repertório das minhas fotografias!
 				</p>
 				<p><a href="../index.html">Site principal</a></p>
+				<p><a href="https://www.flickr.com/photos/192760471@N03/?">Para poderes ver o meu portfólio completo clica em mim</a></p>
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/tavares_photography/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="mailto:diogo.dias.tavares@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
