--- a/Preçario/index.html
+++ b/Preçario/index.html
@@ -74,7 +74,7 @@
 						<article id="contact">
 							<h2 class="major">Snorlax</h2>
                             <span class="image main">
-                                <img src="images/pic04.png" alt="" />
+                                <img src="images/pic04.jpg" alt="" />
                             </span>
 							<p>Este pacote pode ter 150 ou mais fotografias, onde vai poder ter acesso a:</p>
 							<p> Todas as fotografias tratadas. O Download é feito através de uma cloud (OneDrive), cloud esta que te possibilita ver antes de fazer download. O link tem duração de 30 dias.</p>
