--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								<p>Pode clicar no botão "Saber mais" ou clicar diretamente numa forma de contacto.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="asd/index.html" class="button fit primary">mini portfólio</a></li>
+								<li><a href="portfólio/index.html" class="button fit primary">mini portfólio</a></li>
 								<li><a href="generic.html" class="button fit">Saber Mais</a></li>
 							</ul>
 						</div>
