--- a/Preçario/index.html
+++ b/Preçario/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Preçário</h1>
-								<p>Uma lista dos produtos que temos para oferecer <br />
-								<p>A sua sessão é única, peça-nos a sua proposta.</p><br />
+								<p> <br />
+								<p>A sua sessão é única, peça-nos uma proposta.</p><br />
 							</div>
 						</div>
 						<nav>
