--- a/generic.html
+++ b/generic.html
@@ -28,7 +28,9 @@
 								<ul>
 									<li><a href="index.html">Início</a></li>
 									<li><a href="generic.html">Sobre mim</a></li>
-									<li><a href="asd/index.html">Pequeno portfólio</a></li>
+									<li><a href="portfólio/index.html">Pequeno portfólio</a></li>
+									<li><a href="https://www.flickr.com/photos/192760471@N03/?">Portfólio completo</a></li>
+									<li><a href="Preçario/index.html">Preçário</a></li>
 								</ul>
 							</div>
 						</li>
