--- a/generic.html
+++ b/generic.html
@@ -50,7 +50,7 @@
 						<h3>Quem sou?</h3>
 						<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de programação, no <a href="https://www.inete.pt/">INETE </a>em Lisboa.</p>
 
-						<p>À algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
+						<p>aÀ algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
 
 						<hr />
 
