--- a/generic.html
+++ b/generic.html
@@ -50,12 +50,12 @@
 						<h3>Quem sou?</h3>
 						<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de programação, no <a href="https://www.inete.pt/">INETE </a>em Lisboa.</p>
 
-						<p>À algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
+						<p>Há algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
 
 						<hr />
 
 						<h4>Porquê fotografar?</h4>
-						<p>À algum tempo descobri que tinha uma paixão pela fotografia e comecei a experimentar tirar fotografias a tudo para ficar com memórias.</p>
+						<p>Há algum tempo descobri que tinha uma paixão pela fotografia e comecei a experimentar tirar fotografias a tudo para ficar com memórias.</p>
 						<p>Hoje quero fazer disso a minha profissão embora tencione concluir o curso de programação.</p>
 
 						<p>Tendo tido opiniões bastantes positivas para quem já realizei algumas reportagens fotográficas e por ser uma paixão tão grande decidi criar este site para ter uma maior visibilidade e ter uma maior facilidade em demonstrar o meu conteúdo.</p>
