Retirar pequeno portfolio

--- a/index.html
+++ b/index.html
@@ -28,124 +28,127 @@
 										<ul>
 											<li><a href="index.html">Início</a></li>
 											<li><a href="generic.html">Sobre mim</a></li>
-											<li><a href="portfólio/index.html">Pequeno portfólio</a></li>
+											<!--<li><a href="portfólio/index.html">Pequeno portfólio</a></li>-->
 											<li><a href="https://www.flickr.com/photos/192760471@N03/?">Portfólio completo</a></li>
 											<li><a href="Preçario/index.html">Preçário</a></li>
 
 
 										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Diogo Tavares</h2>
-							<p>Capturing moments<br />
-							Site de autoria <a href="generic.html">própria</a>.</p>
-							<ul class="actions special">
-								
-							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Saber mais</a>
-					</section>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>"There is something a photograph must contain, the humanity of the moment"<br /></h2>
-								<p>Valorizo sempre as relações interpessoais para satisfação do cliente, trabalho com perfeição, mas acima de tudo com paixão e dedicação ao que faço!</p>
-							</header>
-							<ul class="icons major">
+	<!-- Banner -->
+											<section id="banner">
+												<div class="inner">
+													<h2>Diogo Tavares</h2>
+													<p>
+														Capturing moments<br />
+														Site de autoria <a href="generic.html">própria</a>.
+													</p>
+													<ul class="actions special">
+													</ul>
+												</div>
+												<a href="#one" class="more scrolly">Saber mais</a>
+											</section>
 
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								
-							</ul>
-						</div>
-					</section>
+											<!-- One -->
+											<section id="one" class="wrapper style1 special">
+												<div class="inner">
+													<header class="major">
+														<h2>"There is something a photograph must contain, the humanity of the moment"<br /></h2>
+														<p>Valorizo sempre as relações interpessoais para satisfação do cliente, trabalho com perfeição, mas acima de tudo com paixão e dedicação ao que faço!</p>
+													</header>
+													<ul class="icons major">
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Pessoas<br /></h2>
-								<p>Capturo momentos pessoais, aqueles que mais amamos naquelas situações que mais gostamos e que não são recorrentes.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="content">
-								<h2>Todas as fotografias devem conter uma história,<br />
-								</h2>
-								<p>Cabe ao fotográfo captar essa história e entregar essa história ao cliente, num formato, visual e apelativo... numa fotografia.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Fotografia automóvel<br /></h2>
-								<p>Trabalho também com viaturas automóveis, para venda ou apenas para recordar mais tarde, sejam eles clássicos, desportivos ou até outros!!</p>
-							</div>
-						</section>
-					</section>
+														<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Como trabalho? </h2>
-								<p>Breve explicação de como trabalho e funciono de forma criativa!<br /></p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane">
-									<h3>Rapidez</h3>
-									<p>Gosto de ser rápido e eficiente no trabalho que realizo, nunca comprometendo a qualidade do mesmo.</p>
-								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Edição</h3>
-									<p>Tento sempre perceber que tipo de edição o cliente gosta, para não entregar uma imagem que não pareça natural a um cliente que goste das suas fotografias mais naturais.</p>
-								</li>
-								<li class="icon solid fa-headphones-alt">
-									<h3>Oiço sempre o cliente</h3>
-									<p>Trabalho sempre em coordenação com a vontade do cliente, tentando sempre satisfazer os seus pedidos.</p>
-								</li>
-								<li class="icon fa-heart">
-									<h3>Paixão</h3>
-									<p>Trabalho com amor ao que faço, trabalhar não é uma obrigação mas sim um gosto, o que facilita a forma como trabalho.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
+													</ul>
+												</div>
+											</section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Mais informações</h2>
-								<p>Pode clicar no botão "Saber mais" ou clicar diretamente numa forma de contacto.</p>
-							</header>
-							<ul class="actions stacked">
-								<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="button fit primary">Portfólio</a></li>
-								<li><a href="generic.html" class="button fit">Saber Mais</a></li>
-							</ul>
-						</div>
-					</section>
+											<!-- Two -->
+											<section id="two" class="wrapper alt style2">
+												<section class="spotlight">
+													<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+														<h2>Pessoas<br /></h2>
+														<p>Capturo momentos pessoais, aqueles que mais amamos naquelas situações que mais gostamos e que não são recorrentes.</p>
+													</div>
+												</section>
+												<section class="spotlight">
+													<div class="content">
+														<h2>
+															Todas as fotografias devem conter uma história,<br />
+														</h2>
+														<p>Cabe ao fotográfo captar essa história e entregar essa história ao cliente, num formato, visual e apelativo... numa fotografia.</p>
+													</div>
+												</section>
+												<section class="spotlight">
+													<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+														<h2>Fotografia automóvel<br /></h2>
+														<p>Trabalho também com viaturas automóveis, para venda ou apenas para recordar mais tarde, sejam eles clássicos, desportivos ou até outros!!</p>
+													</div>
+												</section>
+											</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://www.instagram.com/tavares_photography/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="mailto:diogo.dias.tavares@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="fab fa-flickr"><span class="label"></span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Diogo Tavares </li><li>Design: <a href="generic.html">Feito por mim mesmo</a></li>
-						</ul>
-					</footer>
+											<!-- Three -->
+											<section id="three" class="wrapper style3 special">
+												<div class="inner">
+													<header class="major">
+														<h2>Como trabalho? </h2>
+														<p>Breve explicação de como trabalho e funciono de forma criativa!<br /></p>
+													</header>
+													<ul class="features">
+														<li class="icon fa-paper-plane">
+															<h3>Rapidez</h3>
+															<p>Gosto de ser rápido e eficiente no trabalho que realizo, nunca comprometendo a qualidade do mesmo.</p>
+														</li>
+														<li class="icon solid fa-laptop">
+															<h3>Edição</h3>
+															<p>Tento sempre perceber que tipo de edição o cliente gosta, para não entregar uma imagem que não pareça natural a um cliente que goste das suas fotografias mais naturais.</p>
+														</li>
+														<li class="icon solid fa-headphones-alt">
+															<h3>Oiço sempre o cliente</h3>
+															<p>Trabalho sempre em coordenação com a vontade do cliente, tentando sempre satisfazer os seus pedidos.</p>
+														</li>
+														<li class="icon fa-heart">
+															<h3>Paixão</h3>
+															<p>Trabalho com amor ao que faço, trabalhar não é uma obrigação mas sim um gosto, o que facilita a forma como trabalho.</p>
+														</li>
+													</ul>
+												</div>
+											</section>
 
-			</div>
+											<!-- CTA -->
+											<section id="cta" class="wrapper style4">
+												<div class="inner">
+													<header>
+														<h2>Mais informações</h2>
+														<p>Pode clicar no botão "Saber mais" ou clicar diretamente numa forma de contacto.</p>
+													</header>
+													<ul class="actions stacked">
+														<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="button fit primary">Portfólio</a></li>
+														<li><a href="generic.html" class="button fit">Saber Mais</a></li>
+													</ul>
+												</div>
+											</section>
+
+											<!-- Footer -->
+											<footer id="footer">
+												<ul class="icons">
+													<li><a href="https://www.instagram.com/tavares_photography/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+													<li><a href="mailto:diogo.dias.tavares@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+													<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="fab fa-flickr"><span class="label"></span></a></li>
+												</ul>
+												<ul class="copyright">
+													<li>&copy; Diogo Tavares </li>
+													<li>Design: <a href="generic.html">Feito por mim mesmo</a></li>
+												</ul>
+											</footer>
+
+</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
