--- a/generic.html
+++ b/generic.html
@@ -28,56 +28,56 @@
 								<ul>
 									<li><a href="index.html">Início</a></li>
 									<li><a href="generic.html">Sobre mim</a></li>
-									<li><a href="portfólio/index.html">Pequeno portfólio</a></li>
+									<!--<li><a href="portfólio/index.html">Pequeno portfólio</a></li>-->
 									<li><a href="https://www.flickr.com/photos/192760471@N03/?">Portfólio completo</a></li>
 									<li><a href="Preçario/index.html">Preçário</a></li>
 								</ul>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</header>
-
-			<!-- Main -->
-			<article id="main">
-				<header>
-					<h2>Sobre mim</h2>
-					<p>Aqui irei falar um bocado sobre mim e dar uma breve apresentação</p>
-				</header>
-				<section class="wrapper style5">
-					<div class="inner">
-
-						<h3>Quem sou?</h3>
-						<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de programação, no <a href="https://www.inete.pt/">INETE </a>em Lisboa.</p>
-
-						<p>Há algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
-
-						<hr />
-
-						<h4>Porquê fotografar?</h4>
-						<p>Há algum tempo descobri que tinha uma paixão pela fotografia e comecei a experimentar tirar fotografias a tudo para ficar com memórias.</p>
-						<p>Hoje quero fazer disso a minha profissão embora tencione concluir o curso de programação.</p>
-
-						<p>Tendo tido opiniões bastantes positivas para quem já realizei algumas reportagens fotográficas e por ser uma paixão tão grande decidi criar este site para ter uma maior visibilidade e ter uma maior facilidade em demonstrar o meu conteúdo.</p>
-
 					</div>
-				</section>
-			</article>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://www.instagram.com/tavares_photography/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="mailto:diogo.dias.tavares@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="fab fa-flickr"><span class="label"></span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Diogo Tavares </li>
-					<li>Design: <a href="generic.html">Feito por mim mesmo</a></li>
-				</ul>
-			</footer>
+	<!-- Main -->
+									<article id="main">
+										<header>
+											<h2>Sobre mim</h2>
+											<p>Aqui irei falar um bocado sobre mim e dar uma breve apresentação</p>
+										</header>
+										<section class="wrapper style5">
+											<div class="inner">
 
-		</div>
+												<h3>Quem sou?</h3>
+												<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de programação, no <a href="https://www.inete.pt/">INETE </a>em Lisboa.</p>
+
+												<p>Há algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
+
+												<hr />
+
+												<h4>Porquê fotografar?</h4>
+												<p>Há algum tempo descobri que tinha uma paixão pela fotografia e comecei a experimentar tirar fotografias a tudo para ficar com memórias.</p>
+												<p>Hoje quero fazer disso a minha profissão embora tencione concluir o curso de programação.</p>
+
+												<p>Tendo tido opiniões bastantes positivas para quem já realizei algumas reportagens fotográficas e por ser uma paixão tão grande decidi criar este site para ter uma maior visibilidade e ter uma maior facilidade em demonstrar o meu conteúdo.</p>
+
+											</div>
+										</section>
+									</article>
+
+									<!-- Footer -->
+									<footer id="footer">
+										<ul class="icons">
+											<li><a href="https://www.instagram.com/tavares_photography/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="mailto:diogo.dias.tavares@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+											<li><a href="https://www.flickr.com/photos/192760471@N03/?" class="fab fa-flickr"><span class="label"></span></a></li>
+										</ul>
+										<ul class="copyright">
+											<li>&copy; Diogo Tavares </li>
+											<li>Design: <a href="generic.html">Feito por mim mesmo</a></li>
+										</ul>
+									</footer>
+
+</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
