--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 														<h2>
 															Todas as fotografias devem conter uma história,<br />
 														</h2>
-														<p>Cabe ao fotográfo captar essa história e entregar essa história ao cliente, num formato, visual e apelativo... numa fotografia.</p>
+														<p>Cabe ao fotógrafo captar essa história e entregar essa história ao cliente, num formato, visual e apelativo... numa fotografia.</p>
 													</div>
 												</section>
 												<section class="spotlight">
