--- a/generic.html
+++ b/generic.html
@@ -48,7 +48,7 @@
 											<div class="inner">
 
 												<h3>Quem sou?</h3>
-												<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de programação, no <a href="https://www.inete.pt/">INETE </a>em Lisboa.</p>
+												<p>Sou o Diogo Tavares, tenho 17 anos e estou atualmente a concluir um curso de fotografia, na  <a href="https://escoladigital.com/">Escola Digital </a>em Lisboa.</p>
 
 												<p>Há algum tempo descobri o talento para a fotografia, assim como a paixão que tenho pela mesma.</p>
 
