--- a/generic.html
+++ b/generic.html
@@ -56,7 +56,7 @@
 
 												<h4>Porquê fotografar?</h4>
 												<p>Há algum tempo descobri que tinha uma paixão pela fotografia e comecei a experimentar tirar fotografias a tudo para ficar com memórias.</p>
-												<p>Hoje quero fazer disso a minha profissão embora tencione concluir o curso de programação.</p>
+												<p>Hoje quero fazer disso a minha profissão embora tencione concluir o curso de Fotografia.</p>
 
 												<p>Tendo tido opiniões bastantes positivas para quem já realizei algumas reportagens fotográficas e por ser uma paixão tão grande decidi criar este site para ter uma maior visibilidade e ter uma maior facilidade em demonstrar o meu conteúdo.</p>
 
